# plotly-dash-boilerplate

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
dash_on_azure/: app.py
