[tool.poetry]
name = "plotly-dash-boilerplate"
version = "0.1.0"
description = ""
authors = ["Daniel Kapitan <daniel@kapitan.net>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.4.1"
plotly = "^5.8.0"
pandas = "^1.4.2"
numpy = "^1.22.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
